// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user created resolvers overriding generated resolvers overriding a resolver should not create duplicate function 1`] = `
Array [
  Object {
    "Fn::GetAtt": Array [
      "QuerygetTodopostAuth0FunctionQuerygetTodopostAuth0FunctionAppSyncFunction6BE14593",
      "FunctionId",
    ],
  },
]
`;

exports[`user created resolvers overriding generated resolvers overriding a resolver should not create duplicate function 2`] = `
Array [
  Object {
    "Fn::GetAtt": Array [
      "QuerylistTodosauth0FunctionQuerylistTodosauth0FunctionAppSyncFunction7D761961",
      "FunctionId",
    ],
  },
]
`;
